--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="galeria-work">
                 <div class="cont-work programacion">
                     <div class="img-work">
-                        <img src="img/programacion1.jpg" alt="">
+                        <img src="img/programacion1.JPG" alt="">
                     </div>
                     <div class="textos-work">
                         <h4>Programacion</h4>
@@ -108,7 +108,7 @@
                 </div>
                 <div class="cont-work programacion">
                     <div class="img-work">
-                        <img src="img/programacion3.jpg" alt="">
+                        <img src="img/programacion3.JPG" alt="">
                     </div>
                     <div class="textos-work">
                         <h4>Programacion</h4>
